<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">

    <TextView
        android:text="@string/quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/textQuantity" />

    <Button
        android:text="@string/increment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:onClick="increase"
        android:id="@+id/buttonIncrement" />

    <TextView
        android:text="@string/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/textNumber" />

    <Button
        android:text="@string/decrement"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:onClick="decrease"
        android:id="@+id/buttonDecrement" />

    <TextView
        android:text="@string/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/textPrice" />

    <TextView
        android:text="@string/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPriceNumber" />

    <Button
        android:text="@string/button_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/buttonOrder"
        android:onClick="submitOrder"/>
</LinearLayout>