<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="corp.kingsea.reymar.suacityfirstapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/androidparty"
        android:scaleType="centerCrop"
        android:contentDescription="@string/picture_not_found" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/titleText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonActivity"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_below="@+id/titleText"
        android:layout_alignParentStart="true"
        android:id="@+id/button"
        android:onClick="startButtonClick"/>
</RelativeLayout>
